--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - run: |
           npm i
           npm run build
-        #   pm2 stop 1
-        #   pm2 start 1
-        #   pm2 save
-        #   sudo service nginx restart
+          pm2 stop 1
+          pm2 start 1
+          pm2 save
+          sudo service nginx restart
